k8s/eks/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k-serve-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: k-serve-app
  template:
    metadata:
      labels:
        app: k-serve-app
    spec:
      containers:
        - name: app
          image: 086015456585.dkr.ecr.ap-northeast-2.amazonaws.com/java-k-serve:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/member/me
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/member/me
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
