k8s/eks/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-mock-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-mock-frontend
  template:
    metadata:
      labels:
        app: crypto-mock-frontend
    spec:
      containers:
        - name: frontend
          image: 086015456585.dkr.ecr.ap-northeast-2.amazonaws.com/frontend-crypto-mock:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
