k8s/eks/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k-serve-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k-serve-python
  template:
    metadata:
      labels:
        app: k-serve-python
    spec:
      serviceAccountName: k-serve-monitor
      containers:
        - name: python
          image: 086015456585.dkr.ecr.ap-northeast-2.amazonaws.com/python-k-serve:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8200
          readinessProbe:
            httpGet:
              path: /api/stocks/list
              port: 8200
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/stocks/list
              port: 8200
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 3
