k8s/eks/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-serve-app
spec:
  selector:
    app: k-serve-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
