k8s/eks/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-serve-frontend
spec:
  selector:
    app: k-serve-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
