k8s/eks/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-mock-python
spec:
  selector:
    app: crypto-mock-python
  ports:
    - name: http
      port: 8200
      targetPort: 8200
